fixed bugs, added back button

--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -9,8 +9,8 @@
     </div>
   </div>
   <div id="buttons">
-    <input type="button" id="button1" value="Solve" (click)="solve()">
-    <input type="button" id="button2" value="Hint" (click)="hint()">
-    <input type="button" id="button3" value="" (click)="hint()">
+    <input type="button" id="solveButton" value="Solve" (click)="solve()">
+    <input type="button" id="hintButton" value="Hint" (click)="hint()">
+    <input type="button" id="backButton" value="Back" (click)="back()">
   </div>    
 </div>
